--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
             <button class="channel-btn active" data-src="https://www.youtube.com/embed/ZxaRdBWL894?si=0iYLHquMUb07_8b-">Rudaw TV</button>
-            <button class="channel-btn" data-src=" https://www.rudaw.net/sorani/onair/tv/live">NRT TV</button>
+            <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
             <button class="channel-btn" data-src="https://www.dailymotion.com/embed/video/x8j6qzp">Kurdmax TV</button>
-            <button class="channel-btn" data-src="https://www.youtube.com/embed/live_stream?channel=UCXQl6Nq8jAgMUf5K3HZlRXg">Duhok TV</button>
+            <button class="channel-btn" data-src="  url embed">Duhok TV</button>
         </div>
     </div>
 
