--- a/index.html
+++ b/index.html
@@ -92,8 +92,21 @@
             <!-- Updated stream URLs (test with working sources) -->
             <button class="channel-btn active" data-src="https://www.youtube.com/embed/ZxaRdBWL894?si=0iYLHquMUb07_8b-">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
-            <button class="channel-btn" data-src="https://www.dailymotion.com/embed/video/x8j6qzp">Kurdmax TV</button>
-            <button class="channel-btn" data-src="  url embed">Duhok TV</button>
+            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/kurdistan24-tv/embed.html?autoplay=false&amp;token=faa3bc591da70040ace411e106c01de482827503-33bd394d56ecd13d1126359ccfb412c0-1742151234-1742140434&amp;remote=no_check_ip">Kurdistan24</button>
+
+<button class="channel-btn" data-src="https://live.karwan.tv:9999/kurdistan-tv/embed.html?autoplay=false&amp;token=4f4537f491a29759a93de33c7d538810a943bc9e-739ab2730e49797df9158701af56846a-1742152162-1742141362&amp;remote=no_check_ip ">Kurdistan TV</button>
+
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/waar-tv/embed.html?autoplay=false&amp;token=8354d8fc83ed5f5749f5f8c7a6627772a2d1d5b6-39d6e0ed68d5cf4731505bb1f60c4a68-1742152720-1742141920&amp;remote=no_check_ip">WAAR TV</button>
+
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/amozhgary-tv/embed.html?autoplay=false&amp;token=68a87f81bca50651ffc2587aa973441a3e695e97-22318d75d04b25c2cbd949b9ec6e9efd-1742153039-1742142239&amp;remote=no_check_ip ">Amozhgari TV</button>
+
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/ava-tv/embed.html?autoplay=false&amp;token=48f45ee71f6164e34f09cc0adf05b14df7138e7f-13ba0c352aeb43eb2e9af4169d30bd25-1742153741-1742142941&amp;remote=no_check_ip">AVA TV</button>
+
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/zarok-tv/embed.html?autoplay=false&amp;token=8af18b756d0e6d093f98bdf482844a2c3d5b594b-cf2f1e37cc0f7472f7f6f9425a0cb1e3-1742152893-1742142093&amp;remote=no_check_ip ">Zarok TV</button>
+
+            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/radio-duhok/embed.html?autoplay=false&amp;token=7dc48d3883a4334326336f8d26dc4bc44cce90b9-08f7d38d5821e6eb6990e8fedc040c64-1742151828-1742141028&amp;remote=no_check_ip">Duhok Radio</button>
+ 
+
         </div>
     </div>
 
