--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3032189625676969"
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+        <meta name="google-adsense-account" content="ca-pub-3032189625676969">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURDISH TV</title>
     <style>
