--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
-            <button class="channel-btn active" data-src="https://www.youtube.com/embed/ZxaRdBWL894?si=0iYLHquMUb07_8b-">Rudaw TV</button>
+            <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
             <button class="channel-btn" data-src="https://kurditv.com/embed/26/">Kurdistan24</button>
 
 <button class="channel-btn" data-src="https://kurditv.com/embed/1007/ ">Kurdistan TV</button>
 
-<button class="channel-btn" data-src=" https://www.waarmedia.com/live-streaming">WAAR TV</button>
+<button class="channel-btn" data-src=" https://live.kwikmotion.com/waarmedialive/waarmedia.smil/playlist.m3u8">WAAR TV</button>
 
 <button class="channel-btn" data-src=" https://kurditv.com/embed/338/">Amozhgari TV</button>
 
