--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3032189625676969"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-        <meta name="google-adsense-account" content="ca-pub-3032189625676969">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURDISH TV</title>
     <style>
@@ -93,37 +90,23 @@
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
-            <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
+            <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/
+">KurdmaxShow TV</button>
+            <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
-            <button class="channel-btn" data-src="https://kurditv.com/embed/26/">Kurdistan24</button>
+            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/kurdistan24-tv/embed.html?autoplay=false&amp;token=faa3bc591da70040ace411e106c01de482827503-33bd394d56ecd13d1126359ccfb412c0-1742151234-1742140434&amp;remote=no_check_ip">Kurdistan24</button>
 
-<button class="channel-btn" data-src="https://kurditv.com/embed/1007/ ">Kurdistan TV</button>
+<button class="channel-btn" data-src="https://live.karwan.tv:9999/kurdistan-tv/embed.html?autoplay=false&amp;token=4f4537f491a29759a93de33c7d538810a943bc9e-739ab2730e49797df9158701af56846a-1742152162-1742141362&amp;remote=no_check_ip ">Kurdistan TV</button>
 
-<button class="channel-btn" data-src=" https://live.kwikmotion.com/waarmedialive/waarmedia.smil/playlist.m3u8">WAAR TV</button>
+<button class="channel-btn" data-src="https://live.kwikmotion.com/waarmedialive/waarmedia.smil/playlist.m3u8">WAAR TV</button>
 
-<button class="channel-btn" data-src=" https://kurditv.com/embed/338/">Amozhgari TV</button>
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/amozhgary-tv/embed.html?autoplay=false&amp;token=68a87f81bca50651ffc2587aa973441a3e695e97-22318d75d04b25c2cbd949b9ec6e9efd-1742153039-1742142239&amp;remote=no_check_ip ">Amozhgari TV</button>
 
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/ava-tv/embed.html?autoplay=false&amp;token=48f45ee71f6164e34f09cc0adf05b14df7138e7f-13ba0c352aeb43eb2e9af4169d30bd25-1742153741-1742142941&amp;remote=no_check_ip">AVA TV</button>
 
-<button class="channel-btn" data-src=" https://kurditv.com/embed/119/">TRT Kurdi TV</button>
+<button class="channel-btn" data-src=" https://live.karwan.tv:9999/zarok-tv/embed.html?autoplay=false&amp;token=8af18b756d0e6d093f98bdf482844a2c3d5b594b-cf2f1e37cc0f7472f7f6f9425a0cb1e3-1742152893-1742142093&amp;remote=no_check_ip ">Zarok TV</button>
 
-<button class="channel-btn" data-src="https://kurditv.com/embed/81/">Zagros TV</button>
-
-
-
-<button class="channel-btn" data-src="https://www.ava.news/livewatch">AVA TV</button>
-
-
-
-<button class="channel-btn" data-src="https://kurditv.com/embed/122/">Zarok TV</button>
-
-
-
-
-
-
-
-            
-<button class="channel-btn" data-src=" https://kurditv.com/embed/893/">Duhok TV</button>
+            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/radio-duhok/embed.html?autoplay=false&amp;token=7dc48d3883a4334326336f8d26dc4bc44cce90b9-08f7d38d5821e6eb6990e8fedc040c64-1742151828-1742141028&amp;remote=no_check_ip">Duhok Radio</button>
  
 
         </div>
