--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
-            <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/
+            <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
 ">KurdmaxShow TV</button>
-            <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/">Rudaw TV</button>
+            <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
             <button class="channel-btn" data-src=" https://live.karwan.tv:9999/kurdistan24-tv/embed.html?autoplay=false&amp;token=faa3bc591da70040ace411e106c01de482827503-33bd394d56ecd13d1126359ccfb412c0-1742151234-1742140434&amp;remote=no_check_ip">Kurdistan24</button>
 
