--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
+               <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=0 ">BeinSport1 TV</button>
+             <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=1  ">BeinSport2 TV</button>
+          
             <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
