--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <button class="channel-btn" data-src=" https://live.karwan.tv:9999/amozhgary-tv/embed.html?autoplay=false&amp;token=68a87f81bca50651ffc2587aa973441a3e695e97-22318d75d04b25c2cbd949b9ec6e9efd-1742153039-1742142239&amp;remote=no_check_ip ">Amozhgari TV</button>
 
-<button class="channel-btn" data-src=" https://live.karwan.tv:9999/ava-tv/embed.html?autoplay=false&amp;token=48f45ee71f6164e34f09cc0adf05b14df7138e7f-13ba0c352aeb43eb2e9af4169d30bd25-1742153741-1742142941&amp;remote=no_check_ip">AVA TV</button>
+<button class="channel-btn" data-src=" https://avamedia.live/4705fde0-0eb0-4afc-93c7-78cd2bee7c80">AVA TV</button>
 
 <button class="channel-btn" data-src=" https://live.karwan.tv:9999/zarok-tv/embed.html?autoplay=false&amp;token=8af18b756d0e6d093f98bdf482844a2c3d5b594b-cf2f1e37cc0f7472f7f6f9425a0cb1e3-1742152893-1742142093&amp;remote=no_check_ip ">Zarok TV</button>
 
