--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <button class="channel-btn" data-src="https://live.kwikmotion.com/waarmedialive/waarmedia.smil/playlist.m3u8">WAAR TV</button>
 
-<button class="channel-btn" data-src=" https://live.karwan.tv:9999/amozhgary-tv/embed.html?autoplay=false&amp;token=68a87f81bca50651ffc2587aa973441a3e695e97-22318d75d04b25c2cbd949b9ec6e9efd-1742153039-1742142239&amp;remote=no_check_ip ">Amozhgari TV</button>
+<button class="channel-btn" data-src=" https://app-live.org/live/3268334b/index.m3u8  ">Amozhgari TV</button>
 
 <button class="channel-btn" data-src=" https://ava" + zhmara + ".site/upload/ava.m3u8  ">AVA TV</button>
 
