--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
-            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/kurdistan24-tv/embed.html?autoplay=false&amp;token=faa3bc591da70040ace411e106c01de482827503-33bd394d56ecd13d1126359ccfb412c0-1742151234-1742140434&amp;remote=no_check_ip">Kurdistan24</button>
+            <button class="channel-btn" data-src="  
+https://d1x82nydcxndze.cloudfront.net/live/index_480p25.m3u8 ">Kurdistan24</button>
 
-<button class="channel-btn" data-src="https://live.karwan.tv:9999/kurdistan-tv/embed.html?autoplay=false&amp;token=4f4537f491a29759a93de33c7d538810a943bc9e-739ab2730e49797df9158701af56846a-1742152162-1742141362&amp;remote=no_check_ip ">Kurdistan TV</button>
+<button class="channel-btn" data-src=" https://5a3ed7a72ed4b.streamlock.net/live/SMIL:myStream.smil/chunklist_w1840895338_b1700000_sleng_t64MTA4MHA=.m3u8 ">Kurdistan TV</button>
 
 <button class="channel-btn" data-src="https://live.kwikmotion.com/waarmedialive/waarmedia.smil/playlist.m3u8">WAAR TV</button>
 
@@ -107,7 +108,7 @@
 
 <button class="channel-btn" data-src=" https://ava" + zhmara + ".site/upload/ava.m3u8  ">AVA TV</button>
 
-<button class="channel-btn" data-src=" https://live.karwan.tv:9999/zarok-tv/embed.html?autoplay=false&amp;token=8af18b756d0e6d093f98bdf482844a2c3d5b594b-cf2f1e37cc0f7472f7f6f9425a0cb1e3-1742152893-1742142093&amp;remote=no_check_ip ">Zarok TV</button>
+<button class="channel-btn" data-src=" https://zindikurmanci.zaroktv.com.tr/hls/stream.m3u8 ">Zarok TV</button>
 
             <button class="channel-btn" data-src=" https://live.karwan.tv:9999/radio-duhok/embed.html?autoplay=false&amp;token=7dc48d3883a4334326336f8d26dc4bc44cce90b9-08f7d38d5821e6eb6990e8fedc040c64-1742151828-1742141028&amp;remote=no_check_ip">Duhok Radio</button>
  
