--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
                <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=0 ">BeinSport1 TV</button>
-             <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=1  ">BeinSport2 TV</button>
+             <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=1  ">Zagros TV</button>
           
             <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
             <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
             <button class="channel-btn" data-src="  
-https://d1x82nydcxndze.cloudfront.net/live/index_480p25.m3u8 ">Kurdistan24</button>
+https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 
 <button class="channel-btn" data-src=" https://5a3ed7a72ed4b.streamlock.net/live/SMIL:myStream.smil/chunklist_w1840895338_b1700000_sleng_t64MTA4MHA=.m3u8 ">Kurdistan TV</button>
 
