--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 
 <button class="channel-btn" data-src=" https://zindikurmanci.zaroktv.com.tr/hls/stream.m3u8 ">Zarok TV</button>
 
-            <button class="channel-btn" data-src=" https://live.karwan.tv:9999/radio-duhok/embed.html?autoplay=false&amp;token=7dc48d3883a4334326336f8d26dc4bc44cce90b9-08f7d38d5821e6eb6990e8fedc040c64-1742151828-1742141028&amp;remote=no_check_ip">Duhok Radio</button>
+            <button class="channel-btn" data-src=" https://radio.garden/listen/radio-duhok-fm-88-9/blqTOwxX">Duhok Radio</button>
  
 
         </div>
