--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 
 <button class="channel-btn" data-src=" https://zindikurmanci.zaroktv.com.tr/hls/stream.m3u8 ">Zarok TV</button>
 
-            <button class="channel-btn" data-src=" https://radio.menu/stations/radioduhok-com-radio-duhok-fm/embed/">Duhok Radio</button>
+            <button class="channel-btn" data-src=" https://stream.zeno.fm/unwq3jdyhmbuv?adtonosListenerId=01JQ8BXPG82XPXXHPY3DGRF7GB&aw_0_req_lsid=4eba9c7813187df27d76d4bea34c4188/">Duhok Radio</button>
  
 
         </div>
