--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
-            <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
+           
             <button class="channel-btn" data-src="  
 https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 
@@ -109,7 +109,9 @@ https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 <button class="channel-btn" data-src=" https://ava" + zhmara + ".site/upload/ava.m3u8  ">AVA TV</button>
 
 <button class="channel-btn" data-src=" https://zindikurmanci.zaroktv.com.tr/hls/stream.m3u8 ">Zarok TV</button>
-
+<button class="channel-btn" data-src="https://stream.skynewsarabia.com/hls/sna.m3u8
+ ">SkyNews TV</button>
+ <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
             <button class="channel-btn" data-src=" https://stream.zeno.fm/unwq3jdyhmbuv?adtonosListenerId=01JQ8BXPG82XPXXHPY3DGRF7GB&aw_0_req_lsid=4eba9c7813187df27d76d4bea34c4188/">Duhok Radio</button>
  
 
