--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 <button class="channel-btn" data-src="https://stream.skynewsarabia.com/hls/sna.m3u8
  ">SkyNews TV</button>
  <button class="channel-btn" data-src="https://www.youtube.com/embed/bNyUyrR0PHo?si=Ag6L2S_9oPU4YJNQ ">Al Jazeerah </button>
+<button class="channel-btn" data-src=" https://live.alarabiya.net/alarabiapublish/alhadath.smil/playlist.m3u8
+ ">Al-Hadath TV</button>
+
             <button class="channel-btn" data-src=" https://stream.zeno.fm/unwq3jdyhmbuv?adtonosListenerId=01JQ8BXPG82XPXXHPY3DGRF7GB&aw_0_req_lsid=4eba9c7813187df27d76d4bea34c4188/">Duhok Radio</button>
  
 
