--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
             <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
-           
+           <button class="channel-btn" data-src=" https://tv-trtkurdi.medya.trt.com.tr/master.m3u8
+ ">TRTKurdi TV</button>
+
             <button class="channel-btn" data-src="  
 https://d1x82nydcxndze.cloudfront.net/live/index.m3u8 ">Kurdistan24</button>
 
