--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
             <!-- Updated stream URLs (test with working sources) -->
                <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=0 ">BeinSport1 TV</button>
              <button class="channel-btn active" data-src=" https://5a3ed7a72ed4b.streamlock.net/zagrostv/SMIL:myStream.smil/playlist.m3u8 ">Zagros TV</button>
-          
-            <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW1/playlist.m3u8
+          <button class="channel-btn" data-src="https://6476e46b58f91.streamlock.net/liveTrans/KurdmaxS0rani!/playlist.m3u8
+ ">Kurdmax TV</button>
+
+            <button class="channel-btn active" data-src=     "https://6476e46b58f91.streamlock.net/liveTrans/SHOW2/playlist.m3u8
 ">KurdmaxShow TV</button>
             <button class="channel-btn active" data-src="https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8">Rudaw TV</button>
            <button class="channel-btn" data-src=" https://tv-trtkurdi.medya.trt.com.tr/master.m3u8
