--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
-               <button class="channel-btn active" data-src=" https://yallateri.com/albaplayer/yalla-live-2/?serv=0 ">BeinSport1 TV</button>
+               <button class="channel-btn active" data-src=" https://www.youtube.com/embed/AiQasdSrZVo?si=ykZYMt7jD5RRw34o">BeinSport1 TV</button>
              <button class="channel-btn active" data-src=" https://5a3ed7a72ed4b.streamlock.net/zagrostv/SMIL:myStream.smil/playlist.m3u8 ">Zagros TV</button>
           <button class="channel-btn" data-src="https://6476e46b58f91.streamlock.net/liveTrans/KurdmaxS0rani!/playlist.m3u8
  ">Kurdmax TV</button>
