--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ KURDISH TV</title>
 
         <div class="channel-list">
             <!-- Updated stream URLs (test with working sources) -->
-               <button class="channel-btn active" data-src=" https://www.youtube.com/embed/AiQasdSrZVo?si=ykZYMt7jD5RRw34o">BeinSport1 TV</button>
+               <button class="channel-btn active" data-src=" https://dd.alkoora.live/albaplayer/on-time-sport-1">BeinSport1 TV</button>
              <button class="channel-btn active" data-src=" https://5a3ed7a72ed4b.streamlock.net/zagrostv/SMIL:myStream.smil/playlist.m3u8 ">Zagros TV</button>
           <button class="channel-btn" data-src="https://6476e46b58f91.streamlock.net/liveTrans/KurdmaxS0rani!/playlist.m3u8
  ">Kurdmax TV</button>
